# CMake-CrossCompile-HelloWorld

./: .gitignore  CMakeLists.txt  Readme.md  Win32.cmake  Win64.cmake  build_all.sh  install_all_compiler.sh  linux_aarch64.cmake  linux_aarch64_compile_script.sh  linux_x86_64.cmake  linux_x86_64_compile_script.sh  main.cpp  main.h  win32_compile_script.sh  win64_compile_script.sh
